Fix css problems on mobile safari/chrome

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 .app__video-feed {
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
