--- a/src/components/json-viewer/json-viewer.css
+++ b/src/components/json-viewer/json-viewer.css
@@ -1,3 +1,5 @@
 .json-viewer {
   margin: 0;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
